--- a/AnyGo/LS/AGLoginViewController.xib
+++ b/AnyGo/LS/AGLoginViewController.xib
@@ -20,27 +20,27 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" id="PSc-VW-LqD">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="233"/>
+                    <rect key="frame" x="0.0" y="-5" width="320" height="238"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textview" id="KqP-Ml-jr5">
-                            <rect key="frame" x="32" y="168" width="257" height="44"/>
+                            <rect key="frame" x="32" y="173" width="257" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textview" id="x3N-jI-wQg">
-                            <rect key="frame" x="32" y="94" width="257" height="44"/>
+                            <rect key="frame" x="32" y="99" width="257" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_phone" id="EpV-aD-1ok">
-                            <rect key="frame" x="50" y="108" width="13" height="15"/>
+                            <rect key="frame" x="50" y="113" width="13" height="15"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_key" id="7yX-fX-imf">
-                            <rect key="frame" x="50" y="182" width="13" height="15"/>
+                            <rect key="frame" x="50" y="187" width="13" height="15"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号" minimumFontSize="17" id="90o-s8-Xe1" customClass="PBFlatTextfield">
-                            <rect key="frame" x="73" y="101" width="210" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号" minimumFontSize="17" id="90o-s8-Xe1">
+                            <rect key="frame" x="73" y="106" width="210" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
@@ -48,8 +48,8 @@
                                 <outlet property="delegate" destination="-1" id="1Cv-qS-uI4"/>
                             </connections>
                         </textField>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" id="2dF-T7-ore" customClass="PBFlatTextfield">
-                            <rect key="frame" x="73" y="175" width="210" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" id="2dF-T7-ore">
+                            <rect key="frame" x="73" y="180" width="210" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -60,7 +60,7 @@
                     </subviews>
                     <color key="backgroundColor" red="0.52941176470588236" green="0.82745098039215681" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Jba-PZ-Y6X" customClass="PBFlatButton">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Jba-PZ-Y6X">
                     <rect key="frame" x="32" y="243" width="105" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -70,7 +70,7 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="6Pf-V2-PPA" customClass="PBFlatButton">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="6Pf-V2-PPA">
                     <rect key="frame" x="32" y="300" width="257" height="47"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
@@ -83,7 +83,7 @@
                         <action selector="loginButtonClicked:" destination="-1" eventType="touchUpInside" id="MJH-gQ-e2I"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Vtb-Ee-Vl2" customClass="PBFlatButton">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Vtb-Ee-Vl2">
                     <rect key="frame" x="32" y="367" width="257" height="47"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
